# crypto-sentiment-with-llms

./: Makefile  README.md  anthropic.env.sample  pyproject.toml
src/crypto_sentiment_extractor/: __init__.py  claude.py  config.py
