[project]
name = "crypto-sentiment-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paulescu", email = "plabartabajo@gmail.com" } 
]
requires-python = ">=3.10"
dependencies = [
    "llama-index-llms-anthropic>=0.5.0",
    "llama-index>=0.12.0",
    "loguru>=0.7.2",
    "pandas>=2.2.3",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
